Fix failed cancellation of paste events

BUG: 438426